Massive sylistic Overhaul

--- a/Committees.html
+++ b/Committees.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" type="text/css" href="css/template.css" />
 	
 </head>
-<body data-target="#nino-navbar;" data-spy="scroll" style="background-color: aliceblue">
+<body data-target="#nino-navbar;" data-spy="scroll">
 
 	<!-- Header
     ================================================== -->
