--- a/Conference.html
+++ b/Conference.html
@@ -419,6 +419,29 @@
         <div class="mySlides2 w3-container">
             <button class="w3-button demo w3-black" onclick="currentDiv2(1)">Home Directory</button>
             <h1 align="center">Message From Founder</h1>
+            <hr>
+			<h4 align = "justify" style="padding-left: 20%; padding-right:20%; color:black;">Honourable Directors, Esteemed Delegates and Welcome Guest,<br><br>
+			The Dulwich International Model United Nations (DIMUN) conference was created to bring MUN to Key Stage 3 (KS3 or middle school) students in and around Northern China, as MUN opportunities for these students are limited. However, it quickly became apparent that while schools that already had KS4/5 MUN groups were able to add KS3 students, there were schools willing and eager to participate, but without any MUN experience. <br><br>
+			While guides covering MUN debate rules, terminology, advice for delegates and Chairs are freely available on conference websites for participants, there is nothing out there to help schools go from having no MUN to attending a conference. Once a school has gone to one conference, going to future ones becomes much easier, as the preparation process is essentially the same for every conference. But that first conference is very difficult to attend without any MUN knowledge. <br><br>
+			As the Director Model UN at Dulwich College Beijing for the past four years, with two years of MUN experience before that, I decided to take my knowledge of MUN and create the DIMUN conference. As I started attending MUN conferences as a KS3 student, I know first-hand that even delegates as young as 11 years old can fully participate in, appreciate, and learn a lot from MUN. However, aside from the MYMUN conference in Kuala Lumpur, Malaysia, KS3 conferences do not really exist. Thus, I created DIMUN. <br><br>
+			Enjoy! <br><br>
+			
+			<i><strong>Miranda Melcher </strong><br><br>
+			Founder of DIMUN <br>
+			Secretary-General DIMUN I, Feburary 2011<br>
+			President of Model United Nations at Dulwich College Beijing,  2009-2012<br>
+			Dulwich College Beijing Class of 2012</i>
+			
+			<br><br><br><hr><br><br><br>
+			Honourable Directors, Esteemed Delegates and Welcome Guest,<br><br>
+			Miranda Melcher built our reputation from the ground up as a school known for its rigorous and rewarding MUN programme that, as a result of her leadership, is led purely by students. As such, this document serves particularly useful for student leaders in the same position that Miranda first found herself in 2009 as she began the process of building a sustainable and effective MUN programme, which has since grown from strength to strength.<br><br> 
+			As my friend and mentor, I have had the pleasure to see Miranda push the boundaries of her own notable achievements through middle and high school, to only go on and inspire an entire generation of Dulwich students with her drive and expertise in MUN. The Dulwich International Model United Nations conference (DIMUN) was her brainchild and legacy, and so is this guide. This is a testament to her experience, commitment, and enthusiasm. Future MUN leaders have her to thank for years to come. <br><br>
+			<i><strong>Benjamin Tan</strong> <br><br>
+			Secretary-General of DIMUN II, February 2012<br>
+				President of Model United Nations at Dulwich College Beijing, 2012-2013  <br>       Dulwich College Beijing Class of 2013, Head Boy <br></i>
+
+			</h4>
+       		
         </div>
     </div>
     
