Website content update

--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,9 @@
     ================================================== -->
 <header id="nino-header">
         
-		<div id="nino-headerInner">		
+
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div id="nino-headerInner">		
             
 			<nav id="nino-navbar" class="navbar navbar-default" role="navigation">
             <a class="navbar-brand" href="index.html">DIMUN</a>
@@ -76,12 +78,13 @@
                                     <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
-                                        <a href="Committees.html" onclick="GeneralAssembly();">General Assembly</a>
-                                        <a href="Committees.html" onclick="EnviromentalCommision();">Enviroment Commision</a>
+                                        <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
+                                        <a href="Committees.html" onclick="GeneralAssembly2();">General Assembly 2</a>
+                                        <a href="Committees.html" onclick="EnviromentalCommision();">Enviroment Commission</a>
                                         <a href="Committees.html" onclick="Economic();">Economic and Social Council</a>
                                         <a href="Committees.html" onclick="HumanRights();">Human Rights Council</a>
                                         <a href="Committees.html" onclick="Special();">Special Conference</a>
-                                        <a href="Committees.html" onclick="Disarmament();">Disarmament Commision</a>
+                                        <a href="Committees.html" onclick="Disarmament();">Disarmament Commission</a>
                                         <a href="Committees.html" onclick="Advisory();">Advisory Panel</a>
                                         <a href="Committees.html" onclick="Security();">Security Council</a>
                                     </div>
@@ -90,7 +93,7 @@
 								<li><a href="Transport.html">Transport/Accommodation</a></li>
 								<li><a href="Spotlight.html">Spotlight</a></li>
 								<li><a href="Schedule.html">Schedule</a></li>
-                                <li><a href="Press.html">Press & Media</a></li>
+                                <li><a href="Press.html">Press</a></li>
                                 <li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
@@ -98,6 +101,7 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 		</div>
+
 	</header>
     <center>
         <br><br>
