--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
                                     <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
-                                        <a href="Committees.html" onclick="GeneralAssembly();">General Assembly</a>
-                                        <a href="Committees.html" onclick="EnviromentalCommision();">Enviroment Commision</a>
+                                        <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
+                                        <a href="Committees.html" onclick="GeneralAssembly2();">General Assembly 2</a>
+                                        <a href="Committees.html" onclick="EnviromentalCommision();">Enviroment Commission</a>
                                         <a href="Committees.html" onclick="Economic();">Economic and Social Council</a>
                                         <a href="Committees.html" onclick="HumanRights();">Human Rights Council</a>
                                         <a href="Committees.html" onclick="Special();">Special Conference</a>
-                                        <a href="Committees.html" onclick="Disarmament();">Disarmament Commision</a>
+                                        <a href="Committees.html" onclick="Disarmament();">Disarmament Commission</a>
                                         <a href="Committees.html" onclick="Advisory();">Advisory Panel</a>
                                         <a href="Committees.html" onclick="Security();">Security Council</a>
                                     </div>
@@ -89,7 +90,7 @@
 								<li><a href="Transport.html">Transport/Accommodation</a></li>
 								<li><a href="Spotlight.html">Spotlight</a></li>
 								<li><a href="Schedule.html">Schedule</a></li>
-                                <li><a href="Press.html">Press & Media</a></li>
+                                <li><a href="Press.html">Press</a></li>
                                 <li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
