Changed Ivy's Name

--- a/Conference.html
+++ b/Conference.html
@@ -450,7 +450,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<br>
 				<span class="listOfOfficersTitle">General Assembly Second Committee [GA 2]</span><br>
 				JuWon Ha <br>
-				Ivy Kang <br>
+				TBD<br>
 				<br>
 				<span class="listOfOfficersTitle">Economic and Social Council [ECOSOC]</span><br>
 				Yi Xin Lee <br>
