--- a/Spotlight.html
+++ b/Spotlight.html
@@ -102,7 +102,7 @@
 				<span class="nino-subHeading">Dimun</span>
 				Spotlight
 			</h2>
-            <p align="center">TEXTTEXTT EXTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXT TEXTTEXTTE XTTE XTTEXTTEXTTEXTTEX TTEXTTEXTTEXTTEXTTEXTT EXTTEXT TEXTTEXTTEX TTEXTTEXTTEXTTEXTTEXTT EXTTEX TTEXTT EXTTEXTTEXTTE XTTEXT</p>
+            <p align="center">Since DIMUN VII, the annual DIMUN Spotlight has been bringing delegates to the stage. DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have, whether it be singing, magic tricks or something wholly different. Whatever it may be, DIMUN Spotlight is a time for delegates to take a break from a day full of resolutions and debating to enjoy performances and see just exactly what hidden talents the delegates of their committees have. It is a time for the delegates to show how much more their abilities extend beyond debating and writing, beyond even MUN itself. Delegates will all be encouraged to sign up and fill the evening with exciting performances and shows. Who knows what spectacular performances will there be this year?</p>
 			<p class="nino-sectionDesc">
 				
 			</p>
