--- a/Conference.html
+++ b/Conference.html
@@ -450,7 +450,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<br>
 				<span class="listOfOfficersTitle">General Assembly Second Committee [GA 2]</span><br>
 				JuWon Ha <br>
-				TBD<br>
+				Erik Chen<br>
 				<br>
 				<span class="listOfOfficersTitle">Economic and Social Council [ECOSOC]</span><br>
 				Yi Xin Lee <br>
@@ -471,16 +471,16 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<br>
 
 				<span class="listOfOfficersTitle">Disarmament Council [DIS]</span><br>
-				Michelle Zhang <br>
+				Aalia Labrador<br>
 				Shawn Teh <br>
 				<br>
 				<span class="listOfOfficersTitle">Security Council [SC]</span><br>
-				Haerin.Kim <br>
+				Haerin Kim <br>
 				Eric Choi <br>
 				<br>
 				<span class="listOfOfficersTitle">Advisory Panel [AP]</span><br>
 				Junha Youn <br>
-				Kevin Yao<br>
+				Michelle Zhang<br>
        </p>
         </div>
 
