--- a/Conference.html
+++ b/Conference.html
@@ -477,6 +477,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<span class="listOfOfficersTitle">Security Council [SC]</span><br>
 				Haerin Kim <br>
 				Eric Choi <br>
+				Jonathan Ng <br>
 				<br>
 				<span class="listOfOfficersTitle">Advisory Panel [AP]</span><br>
 				Junha Youn <br>
