--- a/Press.html
+++ b/Press.html
@@ -118,9 +118,9 @@
 					<div class="col-md-4 col-sm-6 item ">
 						<div layout="row">
                                 <i class="mdi mdi-blender nino-icon fsr"></i>
-								<h4 class="">&nbsp;&nbsp;&nbsp;Deputy Head: TBA</h4>								
+								<h4 class="">&nbsp;&nbsp;&nbsp;Deputy Head: Vivian Tan</h4>								
 						</div>
-	                           <img src="images/Empty%20Frame.jpg" height=200px width=220px>
+	                           <img src="images/DIMUN Press Team Photos/PB024285.jpg" height=200px width=220px>
 
 					</div>
 					<div class="col-md-4 col-sm-6 item ">
@@ -128,16 +128,16 @@
                             <i class="mdi mdi-bookmark-plus-outline nino-icon fsr"></i>
                             <h4 class="">&nbsp;&nbsp;&nbsp;Head Of Press: Matthew Cui</h4>                          
 						</div>
-	                       <img src="images/Empty%20Frame.jpg" height=240px width=264px>
+	                       <img src="images/DIMUN Press Team Photos/PB034299.jpg" height=320px width=264px>
 
 					</div>
 					<div class="col-md-4 col-sm-6 item ">
 						<div layout="row">
                                 <i class="mdi mdi-blender nino-icon fsr"></i>
                                 
-                                <h4 class="">&nbsp;&nbsp;&nbsp;Deputy Head: TBA</h4>
+                                <h4 class="">&nbsp;&nbsp;&nbsp;Deputy Head: Spring Huang</h4>
 						</div>
-	                           <img src="images/Empty%20Frame.jpg" height=200px width=220px>
+	                           <img src="images/DIMUN Press Team Photos/PB034305.jpg" height=200px width=220px>
 
 					</div>
 				</div>
