--- a/Contact.html
+++ b/Contact.html
@@ -63,7 +63,7 @@
 							<ul class="nav navbar-nav">
                                 
                                 <div class="nav navbar-nav dropdown">
-								<li class="dropbtn"><a href="Conference.html" onclick="conference();">Conference</a></li>
+								<li class="dropbtn"><a href="#" onclick="conference();">Conference</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Conference.html" onclick="Secretariat();">Secretariat</a>
