--- a/Directors.html
+++ b/Directors.html
@@ -55,7 +55,7 @@
 							<ul class="nav navbar-nav">
                                 
                                 <div class="nav navbar-nav dropdown">
-								<li class="dropbtn"><a href="Conference.html" onclick="conference();">Conference</a></li>
+								<li class="dropbtn"><a href="#" onclick="conference();">Conference</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Conference.html" onclick="Secretariat();">Secretariat</a>
@@ -96,8 +96,59 @@
 
 	</header>
     <center>
-    <h1>Add Text Here</h1>
-    <h3>more text</h3>
+    <br><br><br>
+    <h4 align = "justify" class="MessageFromFounder">
+		Welcome MUN directors:
+		<br><br>
+		<table class="minimalistBlack2">
+		<tbody>
+		<tr>
+		<td align="center"><a>Monthly Directors' Pamphlet</a></td>
+		<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a>Directors' Guide</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+		</tr>
+		</tbody>
+		</table>
+		<br><br>
+		Delegates:
+		<br>
+		<br>
+		Delegates must be in Years 7 – 9 (Grades 6 – 8), and no previous MUN experience is necessary. However, high-school students who wish to join DIMUN VIII are welcome to join the Advisory Panel; a new committee that has been opened specially for interested high-school students. At the conference, each committee will have one delegate per country. Once delegation assignments are released, MUN Directors may choose which committee their students will participate in. In the case of large delegations where there may be more countries assigned to one school, the number of delegates per country and available committees will be given.
+		<br><br>
+		Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. They must also research their individual topics and prepare draft resolutions to be merged during lobbying. Delegates are also expected to be familiar with debate procedures, although committee Chairs will assist all delegates. Our Delegate Guide is available here and contains preparation and research guidelines, a sample resolution, the official DIMUN debate procedures and other relevant information.
+		<br><br><br><br>
+		<table class ="minimalistBlack" style="width: 100%;"  border="1" cellpadding="50">
+		<tbody>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;15th September, 2017</td>
+		<td style="height: 23px;">Form I sent to director&nbsp;</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;6th October, 2017</td>
+		<td style="height: 23px;">Form I deadline</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;23rd October, 2017</td>
+		<td style="height: 23px;">Form II sent out to director</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">&nbsp;17th November, 2017</td>
+		<td style="height: 23px;">Form II deadline</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">1st December, 2017</td>
+		<td style="height: 23px;">Research report finalized&nbsp;</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">8th December, 2017</td>
+		<td style="height: 23px;">Payment deadline</td>
+		</tr>
+		<tr style="height: 23px;">
+		<td style="height: 23px;">2nd March, 2018</td>
+		<td style="height: 23px;">DIMUN VIII Opens</td>
+		</tr>
+		</tbody>
+		</table>
+	</h4>
     </center>
     
     <script type="text/javascript" src="js/jquery.min.js"></script>	
