Commitee page reasearch papers

--- a/Committees.html
+++ b/Committees.html
@@ -102,7 +102,7 @@
             <img src="images/CommitteePg/GeneralAssemblyHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(1)>Topics</button>
-                <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(2)>Collaboration Space</button>
+                <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(2)>Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides2 w3-container">
@@ -110,14 +110,14 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Question of cyber security and measures to prevent cyber warfare<br><br>
-					2. Measure to combat rise in terrorism in relation to religious extremists<br><br>
-					3. Question of children in armed conflicts<br><br>
-					4. Question of the disposal of nuclear waste<br><br>
+                    1. <a target="_blank" href="">Question of cyber security and measures to prevent cyber warfare</a><br><br>
+					2. <a target="_blank" href="pdfs/GA1–Evan Lu–T2-FINAL.pdf">Measure to combat rise in terrorism in relation to religious extremists</a><br><br>
+					3. <a target="_blank" href="">Question of children in armed conflicts</a><br><br>
+					4. <a target="_blank" href="pdfs/GA1-Evan Lu-T4-Final.pdf">Question of the disposal of nuclear waste</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides2 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id=drive1>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsUTF4dExKQTVXYnc#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -131,7 +131,7 @@
             <img src="images/CommitteePg/GeneralAssembly2Header.png" width="100%">
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo10 w3-button committeeBar w3-bar-item" onclick="currentDiv10(1)">Topics</button>
-                <button class="demo10 w3-button committeeBar w3-bar-item" onclick="currentDiv10(2)">Collaboration Space</button>
+                <button class="demo10 w3-button committeeBar w3-bar-item" onclick="currentDiv10(2)">Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides10 w3-container">
@@ -146,7 +146,7 @@
 					</p>
                 </div>
                 <div class="mySlides10 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id="drive9">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsV1JJa2l0SEh5RXM#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -159,7 +159,7 @@
             <img src="images/CommitteePg/EnviromentalConmmisionHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo3 w3-button committeeBar w3-bar-item" onclick=currentDiv3(1)>Topics</button>
-                <button class="demo3 w3-button committeeBar w3-bar-item" onclick=currentDiv3(2)>Collaboration Space</button>
+                <button class="demo3 w3-button committeeBar w3-bar-item" onclick=currentDiv3(2)>Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides3 w3-container">
@@ -174,7 +174,7 @@
 					</p>
                 </div>
                 <div class="mySlides3 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id=drive2>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsUkh5LWo0M3BveEU#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -187,7 +187,7 @@
             <img src="images/CommitteePg/EconomicAndSocialCouncilHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo4 w3-button committeeBar w3-bar-item" onclick=currentDiv4(1)>Topics</button>
-                <button class="demo4 w3-button committeeBar w3-bar-item" onclick=currentDiv4(2)>Collaboration Space</button>
+                <button class="demo4 w3-button committeeBar w3-bar-item" onclick=currentDiv4(2)>Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides4 w3-container">
@@ -202,7 +202,7 @@
 					</p>
                 </div>
                 <div class="mySlides4 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id=drive3>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsRUNZOGZtaGZsT28#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -215,7 +215,7 @@
             <img src="images/CommitteePg/HumanRightsCouncilHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo5 w3-button committeeBar w3-bar-item" onclick=currentDiv5(1)>Topics</button>
-                <button class="demo5 w3-button committeeBar w3-bar-item" onclick=currentDiv5(2)>Collaboration Space</button>
+                <button class="demo5 w3-button committeeBar w3-bar-item" onclick=currentDiv5(2)>Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides5 w3-container">
@@ -230,7 +230,7 @@
 					</p>
                 </div>
                 <div class="mySlides5 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id=drive4>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsXzFLdE9UZ3VZQnc#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -243,7 +243,7 @@
             <img src="images/CommitteePg/SpecialCouncilHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo6 w3-button committeeBar w3-bar-item" onclick=currentDiv6(1)>Topics</button>
-                <button class="demo6 w3-button committeeBar w3-bar-item" onclick=currentDiv6(2)>Collaboration Space</button>
+                <button class="demo6 w3-button committeeBar w3-bar-item" onclick=currentDiv6(2)>Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides6 w3-container">
@@ -258,7 +258,7 @@
 					</p>
                 </div>
                 <div class="mySlides6 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id=drive5>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsYkgzcjd6c2lnWkE#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -271,7 +271,7 @@
             <img src="images/CommitteePg/DisarmamentCommitteeHeader.png" width=100%>
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo7 w3-button committeeBar w3-bar-item" onclick=currentDiv7(1)>Topics</button>
-                <button class="demo7 w3-button committeeBar w3-bar-item" onclick="currentDiv7(2)">Collaboration Space</button>
+                <button class="demo7 w3-button committeeBar w3-bar-item" onclick="currentDiv7(2)">Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides7 w3-container">
@@ -286,7 +286,7 @@
 					</p>
                 </div>
                 <div class="mySlides7 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id="drive6">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsWEdZSXdpbmw2Q1E#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -299,7 +299,7 @@
             <img src="images/CommitteePg/AdvisoryPanelHeader.png" width="100%">
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo8 w3-button committeeBar w3-bar-item" onclick="currentDiv8(1)">Topics</button>
-                <button class="demo8 w3-button committeeBar w3-bar-item" onclick="currentDiv8(2)">Collaboration Space</button>
+                <button class="demo8 w3-button committeeBar w3-bar-item" onclick="currentDiv8(2)">Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides8 w3-container">
@@ -307,13 +307,13 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Measures to resolve territorial disputes in the South China Sea <br><br>
-					2. Addressing the humanitarian issue in the Democratic People's Republic of Korea <br><br>
-					3. Combatting the potential threat of an arms race in Asia<br><br>
+                    1. <a target="_blank" href="pdfs/AP-MichelleJunHa-T1-FINAL.pdf">Measures to resolve territorial disputes in the South China Sea </a> <br><br>
+					2. <a target="_blank" href="">Addressing the humanitarian issue in the Democratic People's Republic of Korea </a> <br><br>
+					3. <a target="_blank" href="">Combatting the potential threat of an arms race in Asia</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides8 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id="drive7">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsakZ3RXZ5d2EyZDQ#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
@@ -327,7 +327,7 @@
             <img src="images/CommitteePg/SecurityCouncilHeader.png" width="100%">
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo9 w3-button committeeBar w3-bar-item" onclick="currentDiv9(1)">Topics</button>
-                <button class="demo9 w3-button committeeBar w3-bar-item" onclick="currentDiv9(2)">Collaboration Space</button>
+                <button class="demo9 w3-button committeeBar w3-bar-item" onclick="currentDiv9(2)">Resolutions</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides9 w3-container">
@@ -335,13 +335,13 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-						1. The Situation in the Korean peninsula<br><br>
-						2. Question of Non-State Actors as a Danger to International Peace and Security <br><br>
-						3. The Situation in Catalonia <br><br>
+						1. <a target="_blank" href="">The Situation in the Korean peninsula</a><br><br>
+						2. <a target="_blank" href="pdfs/SC-Haerin Kim-T2-FINAL.pdf">Question of Non-State Actors as a Danger to International Peace and Security</a> <br><br>
+						3.  <a target="_blank" href="pdfs/SC-Jonathan Ng-T3-FINAL.pdf">The Situation in Catalonia</a> <br><br>
 					</p>
                 </div>
                 <div class="mySlides9 w3-container">
-                    <h1>Collaboration Space</h1>
+                    <h1>Resolutions</h1>
                     <div id="drive8">
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsV2J1UkRmMl9NT2M#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
